@@ -3,8 +3,8 @@ package org.osm2world.math.shapes;
 import static java.lang.Math.max;
 import static java.lang.Math.min;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.osm2world.math.Vector3D;
 import org.osm2world.math.VectorXYZ;
@@ -56,14 +56,15 @@ public class AxisAlignedBoundingBoxXYZ {
 	}
 
 	public Collection<VectorXYZ> corners() {
-		return Arrays.asList(new VectorXYZ[]{new VectorXYZ(minX, minY, minZ),
+		return List.of(
+				new VectorXYZ(minX, minY, minZ),
 				new VectorXYZ(minX, minY, maxZ),
 				new VectorXYZ(minX, maxY, minZ),
 				new VectorXYZ(minX, maxY, maxZ),
 				new VectorXYZ(maxX, minY, minZ),
 				new VectorXYZ(maxX, minY, maxZ),
 				new VectorXYZ(maxX, maxY, minZ),
-				new VectorXYZ(maxX, maxY, maxZ)});
+				new VectorXYZ(maxX, maxY, maxZ));
 	}
 
 	/**
@@ -99,6 +100,10 @@ public class AxisAlignedBoundingBoxXYZ {
 
 	public boolean contains(VectorXYZ v) {
 		return v.x >= minX && v.x <= maxX && v.y >= minY && v.y <= maxY && v.z >= minZ && v.z <= maxZ;
+	}
+
+	public AxisAlignedRectangleXZ xz() {
+		return new AxisAlignedRectangleXZ(minX, minZ, maxX, maxZ);
 	}
 
 	public static final AxisAlignedBoundingBoxXYZ union(
